--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,13 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: 'Roboto', 'Ubuntu', sans-serif;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 
 body {
 	background-color: #f5f7fa;
+	/* overflow-x: hidden; */
+	width: 100%;
 }
 
 #root {
@@ -17,4 +19,5 @@ body {
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: flex-start;
+	width: 100%;
 }
